# drone-controller

./: .gitignore  .gitmodules  README.md  compile_commands.json  pid-drone.ino
I2CTesting/: I2CTesting.ino  Makefile  sketch.json
PCB/drone_fc/: #auto_saved_files#  BNO055.kicad_sym  QFN40P300X300X105-24N.kicad_mod  STM32_PhilsLab_SchFoot.pretty  STM32_PhilsLab_SchSym.kicad_sym  drone_fc-altium-import.kicad_sym  drone_fc.kicad_pcb  drone_fc.kicad_prl  drone_fc.kicad_pro  drone_fc.kicad_sch  drone_fc.kicad_sch-bak  fp-info-cache  fp-lib-table  nRF52840.bak  nRF52840.kicad_sym  sym-lib-table
PCB/drone_fc/BSD840N/: 2024-01-27_09-37-07.kicad_sym  PG-SOT-363-DUAL-N_INF.step
PCB/drone_fc/MiscPads.pretty/: Pad.kicad_mod
PCB/drone_fc/STM32_PhilsLab_SchFoot.pretty/: DLF162500LT-5028A1.kicad_mod
PCB/drone_fc/nRF52840.pretty/: nRF52840.kicad_mod
UnitySim/Drone Sim/: Assembly-CSharp.csproj  Drone Sim.sln
libraries/BNO055/: BNO055.cpp  BNO055.h  library.properties
libraries/DSHOT/: DShot.cpp  DShot.h  PWM.cpp  PWM.h
libraries/I2C/: CustomI2C.cpp  CustomI2C.h  library.properties
libraries/ICM20948/: ICM20948.cpp  ICM20948.h  library.properties
libraries/VL53L4CXHeader/: VL53L4CX.h  library.properties
mbed-test/: CMakeLists.txt  main.cpp  rtti.json
pid-drone/: Makefile  VL53L4CX.h  compile_commands.json  pid-drone.ino
zephyr/drone-fc/: CMakeLists.txt  prj.conf
zephyr/drone-fc/src/: main.c  main.cpp  vl53lx_class.cpp  vl53lx_class.h
zephyr/drone-fc/src/icm20948/: icm20948.c  icm20948.h
zephyr/drone-fc/src/vl53lx/: vl53lx_class.cpp
(+38 files in other folders)
